--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,13 +5,13 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇰🇷 韩国-232.4KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇻🇳 越南-2.48MB/s(Youtube:不良林), server: hcm2.aqvpn.me, port: 443, type: trojan, password: d00083c7-e3db-4707-a24d-5662912368ff, sni: hcm2.aqvpn.me, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-2.73MB/s(Youtube:不良林), server: 1.ezydfdd.com, port: 443, type: vmess, uuid: 4ee48ad8-178c-40a2-9c52-a14e90a06e49, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /nmsl, ws-headers: {Host: 1.ezydfdd.com}}
-  - {name: 🇺🇸 美国-11.42MB/s(Youtube:不良林), server: ocrb2.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: ocrb2.moonfree.top}}
-  - {name: 🇨🇳 中国-1.46MB/s(Youtube:不良林), server: gy.cwcsrsyby.xyz, port: 47515, type: vmess, uuid: 2a30f24e-c164-3f34-a99d-e9107655cf49, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
+  - {name: 波兰-201.4KB/s(Youtube:不良林), server: 217.30.10.64, port: 9094, type: ss, cipher: aes-256-cfb, password: rpgbNnU9rDDU4aWZ}
+  - {name: 🇰🇷 韩国-1.60MB/s(Youtube:不良林), server: 193.123.232.191, port: 1167, type: vmess, uuid: 840c3605-84af-498b-87e2-3f8404080345, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
+  - {name: 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林), server: jgwxn2.gaox.ml, port: 443, type: trojan, password: c2b60d6a-a2f5-40ff-b7f9-f7658abcbf26, sni: jgwxn2.gaox.ml, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: snacks.starspace.link, port: 443, type: trojan, password: 0lbw6RXSl7eqCYMv, sni: snacks.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.17MB/s(Youtube:不良林), server: views.pickaxe.sh, port: 443, type: trojan, password: XQ5jxs58ecd403l7, sni: views.pickaxe.sh, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.75MB/s(Youtube:不良林), server: views.pickaxe.sh, port: 443, type: trojan, password: XQ5jxs58ecd403l7, sni: views.pickaxe.sh, skip-cert-verify: true}
   - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
   - {name: 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林), server: 213.183.53.208, port: 9025, type: ss, cipher: aes-256-cfb, password: XPtzA9sCug3SPR4c}
   - {name: 🇺🇸 美国-3.02MB/s(Youtube:不良林), server: v3.ssrsub.com, port: 443, type: vmess, uuid: 620d82a8-22ba-4945-90ba-a2bed1cde1d2, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /api/v3/download.getFile, ws-headers: {Host: v3.ssrsub.com}}
@@ -21,13 +21,13 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-232.4KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 波兰-201.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
@@ -36,13 +36,13 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇰🇷 韩国-232.4KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 波兰-201.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
@@ -52,13 +52,13 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-232.4KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 波兰-201.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
@@ -72,13 +72,13 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇰🇷 韩国-232.4KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 波兰-201.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
@@ -87,13 +87,13 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇰🇷 韩国-232.4KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 波兰-201.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
@@ -103,13 +103,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-232.4KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 波兰-201.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
@@ -128,13 +128,13 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇰🇷 韩国-232.4KB/s(Youtube:不良林)
-      - 🇻🇳 越南-2.48MB/s(Youtube:不良林)
-      - 🇺🇸 美国-2.73MB/s(Youtube:不良林)
-      - 🇺🇸 美国-11.42MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.46MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 波兰-201.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.60MB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.34MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.17MB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.75MB/s(Youtube:不良林)
       - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
       - 🇷🇺 俄罗斯联邦-323.7KB/s(Youtube:不良林)
       - 🇺🇸 美国-3.02MB/s(Youtube:不良林)
