--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-5.92MB/s(Youtube:不良林), server: 80.251.208.30, port: 22223, type: vmess, uuid: 5ce411c8-da98-44f5-ac1b-3b32ccdd8ce7, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /echo, ws-headers: {Host: 80.251.208.30}}
-  - {name: 波兰-566.6KB/s(Youtube:不良林), server: 217.30.10.64, port: 9019, type: ss, cipher: aes-256-cfb, password: GA9KzeEgvfxNrgmM}
-  - {name: 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林), server: 185.4.65.6, port: 21247, type: ss, cipher: aes-256-cfb, password: vDS9G2p}
-  - {name: 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林), server: jgwxn3.gaox.ml, port: 443, type: trojan, password: cb43b7c2-b744-41c5-bcc2-fd7467b332cf, sni: jgwxn3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-9.43MB/s(Youtube:不良林), server: ocrb2.moonfree.top, port: 443, type: vmess, uuid: 6e9eeae6-c3d1-439e-9f7a-213fe09b2dbe, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /, ws-headers: {Host: ocrb2.moonfree.top}}
-  - {name: 🇺🇸 美国-4.17MB/s(Youtube:不良林), server: fhcamd2.gaox.ml, port: 443, type: trojan, password: dbf9bf9c-2c3f-474a-8031-d4c00666a989, sni: fhcamd2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-6.60MB/s(Youtube:不良林), server: jgwdj4.gaox.ml, port: 443, type: trojan, password: c09eb137-bf68-4658-84e0-102d94b74168, sni: jgwdj4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-2.98MB/s(Youtube:不良林), server: jgwhdlb3.gaox.ml, port: 443, type: trojan, password: 006baa3f-4bc3-4915-b60d-c8c5dae11a11, sni: jgwhdlb3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林), server: 331tw.fans8.xyz, port: 80, type: vmess, uuid: 7f4ff2e1-c08f-35bd-afe7-4a6a386907aa, alterId: 2, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ray, ws-headers: {Host: 331tw.fans8.xyz}}
+  - {name: 🇺🇸 美国-787.7KB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
+  - {name: 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林), server: 213.183.53.208, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
+  - {name: 🇬🇧 英国-2.91MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: snacks.starspace.link, port: 443, type: trojan, password: 0lbw6RXSl7eqCYMv, sni: snacks.starspace.link, skip-cert-verify: true}
+  - {name: 波兰-326.9KB/s(Youtube:不良林), server: 217.30.10.64, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
+  - {name: 🇺🇸 美国-594.3KB/s(Youtube:不良林), server: outdoor.starspace.link, port: 443, type: trojan, password: 4brytjljFgnUu3WU, sni: outdoor.starspace.link, skip-cert-verify: true}
+  - {name: 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
+  - {name: 🇩🇪 德国-2.18MB/s(Youtube:不良林), server: de-03.fireplay.io, port: 443, type: trojan, password: 63X7Dg58EII2qt6f, sni: de-03.fireplay.io, skip-cert-verify: true}
+  - {name: 🇮🇳 印度-312.8KB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 1c0e4a18-4d7a-4231-a55d-1dee0fe6732a}
+  - {name: 波兰-484.2KB/s(Youtube:不良林), server: 217.30.10.64, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
-      - 波兰-566.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-787.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 波兰-326.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-594.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-312.8KB/s(Youtube:不良林)
+      - 波兰-484.2KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
-      - 波兰-566.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-787.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 波兰-326.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-594.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-312.8KB/s(Youtube:不良林)
+      - 波兰-484.2KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
-      - 波兰-566.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-787.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 波兰-326.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-594.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-312.8KB/s(Youtube:不良林)
+      - 波兰-484.2KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
-      - 波兰-566.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-787.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 波兰-326.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-594.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-312.8KB/s(Youtube:不良林)
+      - 波兰-484.2KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
-      - 波兰-566.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-787.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 波兰-326.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-594.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-312.8KB/s(Youtube:不良林)
+      - 波兰-484.2KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
-      - 波兰-566.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-787.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 波兰-326.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-594.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-312.8KB/s(Youtube:不良林)
+      - 波兰-484.2KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-5.92MB/s(Youtube:不良林)
-      - 波兰-566.6KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.51MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.72MB/s(Youtube:不良林)
-      - 🇺🇸 美国-9.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.17MB/s(Youtube:不良林)
-      - 🇯🇵 日本-6.60MB/s(Youtube:不良林)
-      - 🇮🇳 印度-2.98MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-2.73MB/s(Youtube:不良林)
+      - 🇺🇸 美国-787.7KB/s(Youtube:不良林)
+      - 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林)
+      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
+      - 波兰-326.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-594.3KB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
+      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
+      - 🇮🇳 印度-312.8KB/s(Youtube:不良林)
+      - 波兰-484.2KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
