--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇺🇸 美国-787.7KB/s(Youtube:不良林), server: wireless.starspace.link, port: 443, type: trojan, password: 5LN8SGTqxk336nFg, sni: wireless.starspace.link, skip-cert-verify: true}
-  - {name: 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林), server: 213.183.53.208, port: 9003, type: ss, cipher: aes-256-cfb, password: JdmRK9gMEqFgs8nP}
-  - {name: 🇬🇧 英国-2.91MB/s(Youtube:不良林), server: jgwld1.gaox.ml, port: 443, type: trojan, password: 02e653c9-7c93-46a9-999d-11834bd0c577, sni: jgwld1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-1.91MB/s(Youtube:不良林), server: snacks.starspace.link, port: 443, type: trojan, password: 0lbw6RXSl7eqCYMv, sni: snacks.starspace.link, skip-cert-verify: true}
-  - {name: 波兰-326.9KB/s(Youtube:不良林), server: 217.30.10.64, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇺🇸 美国-594.3KB/s(Youtube:不良林), server: outdoor.starspace.link, port: 443, type: trojan, password: 4brytjljFgnUu3WU, sni: outdoor.starspace.link, skip-cert-verify: true}
-  - {name: 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林), server: jgwxn4.gaox.ml, port: 443, type: trojan, password: e8c1ab3c-89b3-4933-92df-682e6dce7819, sni: jgwxn4.gaox.ml, skip-cert-verify: true}
-  - {name: 🇩🇪 德国-2.18MB/s(Youtube:不良林), server: de-03.fireplay.io, port: 443, type: trojan, password: 63X7Dg58EII2qt6f, sni: de-03.fireplay.io, skip-cert-verify: true}
-  - {name: 🇮🇳 印度-312.8KB/s(Youtube:不良林), server: 206.189.136.113, port: 46786, type: ss, cipher: chacha20-ietf-poly1305, password: 1c0e4a18-4d7a-4231-a55d-1dee0fe6732a}
-  - {name: 波兰-484.2KB/s(Youtube:不良林), server: 217.30.10.64, port: 9001, type: ss, cipher: aes-256-cfb, password: UkXRsXvR6buDMG2Y}
+  - {name: 🇨🇳 中国-251.1KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
+  - {name: 波兰-412.9KB/s(Youtube:不良林), server: 217.30.10.64, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
+  - {name: 🇰🇷 韩国-900.4KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-772.4KB/s(Youtube:不良林), server: holidays.starspace.link, port: 443, type: trojan, password: XCPKaaV8I1rmb7Ai, sni: holidays.starspace.link, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-880.1KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇦 加拿大-3.43MB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
+  - {name: 🇺🇸 美国-769.4KB/s(Youtube:不良林), server: living.starspace.link, port: 443, type: trojan, password: NNhSlVRhte1Vzw5D, sni: living.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-334.5KB/s(Youtube:不良林), server: sunhaoduo.tk, port: 443, type: trojan, password: b61d3b3c, sni: sunhaoduo.tk, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: meet-two.defun.us, port: 443, type: trojan, password: SolQapgEUoQ1ISsB, sni: meet-two.defun.us, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-425.8KB/s(Youtube:不良林), server: charge.starspace.link, port: 443, type: trojan, password: 8UnS7eSMi8OFKfje, sni: charge.starspace.link, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-787.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 波兰-326.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-594.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-312.8KB/s(Youtube:不良林)
-      - 波兰-484.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
+      - 波兰-412.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-900.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-880.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-769.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇺🇸 美国-787.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 波兰-326.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-594.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-312.8KB/s(Youtube:不良林)
-      - 波兰-484.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
+      - 波兰-412.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-900.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-880.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-769.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇺🇸 美国-787.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 波兰-326.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-594.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-312.8KB/s(Youtube:不良林)
-      - 波兰-484.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
+      - 波兰-412.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-900.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-880.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-769.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇺🇸 美国-787.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 波兰-326.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-594.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-312.8KB/s(Youtube:不良林)
-      - 波兰-484.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
+      - 波兰-412.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-900.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-880.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-769.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇺🇸 美国-787.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 波兰-326.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-594.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-312.8KB/s(Youtube:不良林)
-      - 波兰-484.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
+      - 波兰-412.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-900.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-880.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-769.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-787.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 波兰-326.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-594.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-312.8KB/s(Youtube:不良林)
-      - 波兰-484.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
+      - 波兰-412.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-900.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-880.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-769.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇺🇸 美国-787.7KB/s(Youtube:不良林)
-      - 🇷🇺 俄罗斯联邦-205.6KB/s(Youtube:不良林)
-      - 🇬🇧 英国-2.91MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.91MB/s(Youtube:不良林)
-      - 波兰-326.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-594.3KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.52MB/s(Youtube:不良林)
-      - 🇩🇪 德国-2.18MB/s(Youtube:不良林)
-      - 🇮🇳 印度-312.8KB/s(Youtube:不良林)
-      - 波兰-484.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
+      - 波兰-412.9KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-900.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-772.4KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-880.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
+      - 🇺🇸 美国-769.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
+      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
+      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
