--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-251.1KB/s(Youtube:不良林), server: fkgfw-prod.i.sxl.cn, port: 443, type: ss, cipher: aes-256-cfb, password: E4DNMf73kHPrd8Qq7aqGPf7f}
-  - {name: 波兰-412.9KB/s(Youtube:不良林), server: 217.30.10.64, port: 9000, type: ss, cipher: aes-256-cfb, password: a3GFYt36Sm82Vys9}
-  - {name: 🇰🇷 韩国-900.4KB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-772.4KB/s(Youtube:不良林), server: holidays.starspace.link, port: 443, type: trojan, password: XCPKaaV8I1rmb7Ai, sni: holidays.starspace.link, skip-cert-verify: true}
-  - {name: 🇰🇷 韩国-880.1KB/s(Youtube:不良林), server: jgw2.gaox.ml, port: 443, type: trojan, password: f2117e99-9b6e-47fd-b0a9-634a0b15b998, sni: jgw2.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇦 加拿大-3.43MB/s(Youtube:不良林), server: 147.182.151.24, port: 20110, type: ss, cipher: aes-256-cfb, password: f5e0ecc4e6b84a668ee9ed98e0a30ca9}
-  - {name: 🇺🇸 美国-769.4KB/s(Youtube:不良林), server: living.starspace.link, port: 443, type: trojan, password: NNhSlVRhte1Vzw5D, sni: living.starspace.link, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-334.5KB/s(Youtube:不良林), server: sunhaoduo.tk, port: 443, type: trojan, password: b61d3b3c, sni: sunhaoduo.tk, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.77MB/s(Youtube:不良林), server: meet-two.defun.us, port: 443, type: trojan, password: SolQapgEUoQ1ISsB, sni: meet-two.defun.us, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-425.8KB/s(Youtube:不良林), server: charge.starspace.link, port: 443, type: trojan, password: 8UnS7eSMi8OFKfje, sni: charge.starspace.link, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.82MB/s(Youtube:不良林), server: jgwcc2.gaox.ml, port: 443, type: trojan, password: 9c822f05-cfdc-479a-9534-60f3d4127435, sni: jgwcc2.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-5.47MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
+  - {name: 🇨🇦 加拿大-2.53MB/s(Youtube:不良林), server: 134.195.198.252, port: 4444, type: ss, cipher: aes-256-gcm, password: pKEW8JPByTVTLtM}
+  - {name: 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林), server: neteasy.cf, port: 45929, type: trojan, password: 2XWUtOT64u, sni: neteasy.cf, skip-cert-verify: true}
+  - {name: 波兰-264.9KB/s(Youtube:不良林), server: 217.30.10.64, port: 9059, type: ss, cipher: aes-256-cfb, password: 9XwYyZsK8SNzQDtY}
+  - {name: 🇺🇸 美国-5.38MB/s(Youtube:不良林), server: sunhaoduo.tk, port: 443, type: trojan, password: b61d3b3c, sni: sunhaoduo.tk, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-2.76MB/s(Youtube:不良林), server: meet-two.defun.us, port: 443, type: trojan, password: SolQapgEUoQ1ISsB, sni: meet-two.defun.us, skip-cert-verify: true}
+  - {name: 波兰-515.7KB/s(Youtube:不良林), server: 217.30.10.64, port: 9041, type: ss, cipher: aes-256-cfb, password: U6qnYRhfyDmn8sgn}
+  - {name: 🇨🇳 中国-4.88MB/s(Youtube:不良林), server: gy.cwcsrsyby.xyz, port: 47515, type: vmess, uuid: 2a30f24e-c164-3f34-a99d-e9107655cf49, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇬🇧 英国-1.30MB/s(Youtube:不良林), server: 178.62.16.161, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 波兰-412.9KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-900.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-880.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-769.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 波兰-264.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 波兰-515.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 波兰-412.9KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-900.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-880.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-769.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 波兰-264.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 波兰-515.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 波兰-412.9KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-900.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-880.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-769.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 波兰-264.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 波兰-515.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 波兰-412.9KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-900.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-880.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-769.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 波兰-264.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 波兰-515.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 波兰-412.9KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-900.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-880.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-769.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 波兰-264.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 波兰-515.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 波兰-412.9KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-900.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-880.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-769.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 波兰-264.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 波兰-515.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-251.1KB/s(Youtube:不良林)
-      - 波兰-412.9KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-900.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-772.4KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-880.1KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-3.43MB/s(Youtube:不良林)
-      - 🇺🇸 美国-769.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-334.5KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.77MB/s(Youtube:不良林)
-      - 🇺🇸 美国-425.8KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.82MB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.47MB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-2.53MB/s(Youtube:不良林)
+      - 🇦🇺 澳大利亚-2.71MB/s(Youtube:不良林)
+      - 波兰-264.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.38MB/s(Youtube:不良林)
+      - 🇺🇸 美国-2.76MB/s(Youtube:不良林)
+      - 波兰-515.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-4.88MB/s(Youtube:不良林)
+      - 🇬🇧 英国-1.30MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
